# dafx

./: .gitignore
dsp/: CMakeLists.txt  audio_processor.cpp  audio_processor.h  bindings.cpp  constants.h  filters.cpp  filters.h  oscillator.cpp  oscillator.h
dsp/.cache/clangd/index/: bindings.cpp.CC6438991EDE364C.idx  constants.h.BE229F87FCDA94FC.idx  filters.cpp.BC0BBE05018503A9.idx  filters.h.27114CDA7878AEB6.idx  oscillator.cpp.3576DF3B13C088BF.idx  oscillator.h.27A0960AF4674BD9.idx
dsp/testing/: saw_test  saw_test.cpp
frontend/public/: dsp-emscripten-glue.js  dsp-emscripten-glue.wasm  dsp-processor.js
frontend/src/: App.css  App.tsx
python_sandbox/: canonical-filters.py  play-simple-waveforms.py  pyproject.toml  scratch.ipynb
